--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "video-dvr",
+  "version": "0.2",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "koa": "^2.15.2",
     "koa-throttle2": "^3.1.8"
